# portfolio-chatbot-backend_2.0

./: .gitignore  main.py  requirements.txt
person-agent/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
person-agent/agent/: agent.py  agent_streamlit_gemini.py  agent_streamlit_gpt.py
person-agent/mcp_server/: pipeline.py  server.py  test_pipeline.py  test_tools.py
person-agent/mcp_server/tools/: crawl_page.py  extract_profile.py  github_tools.py  open_page.py  search_person.py  smart_scrape.py
